fixed overflow issue for active editing menu item

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -2799,6 +2799,10 @@ p{
             overflow: hidden;
           }
 
+          span{
+            .inline();
+          }
+
           .menu-icon{
             .inline-block();
             border:@bstm rgba(121, 143, 163, 0.35);
